    (menu-methods are still installed).
  * dh_*: Deprecate -s in favor of -a.  The -s option is
    removed in compat 11.
  * dh_strip: Fix regression in 9.20160618, which caused
    issues when there were hardlinked ELF binaries in a
    package.  Thanks to Sven Joachim for the report, the
    analysis/testing and for providing a patch for the
    most common case.  (Closes: #829142)

  [ Translations ]
  * Update German translation (Chris Leick + Eduard Bloch)
    (Closes: #827699)

 -- Niels Thykier <niels@thykier.net>  Sat, 18 Jun 2016 21:10:26 +0000

debhelper (9.20160618.1) unstable; urgency=medium

  * Dh_Lib.pm: Reject requests for compat 4 instead of
    silently accepting it (while all helpers no longer
    check for it).

 -- Niels Thykier <niels@thykier.net>  Sat, 18 Jun 2016 20:52:29 +0000

debhelper (9.20160618) unstable; urgency=medium

  * dh: Fix bug where "--help" or "--list" would not work
    unless "debian/compat" existed and had a supported
    compat level.  (Closes: #820508)
  * dh_compress: Gracefully handle debian (or any other
    path segment in the package "tmpdir") being a symlink
    pointing outside the same directory.  Thanks to
    Bernhard Miklautz for the report.  (Closes: #820711)
  * Dh_Lib.pm: Compat files are now mandatory.
  * dh_clean: Remove work around for missing compat file.
    This removes a confusing warning when the package is
    not built by CDBS.  (Closes: #811059)
  * debhelper.pod: Add a line stating that debian/compat
    is mandatory.  (Closes: #805405)
  * dh_strip: Apply patch from Peter Pentchev to only strip
    static libraries with a basename matching "lib.*\.a".
    (Closes: #820446)
  * ant.pm: Apply patch from Emmanuel Bourg to pass a
    normalised "user.name" parameter to ant.
    (Closes: #824490)
  * dh_installudev/dh_installmodules: Drop maintainer
    script snippets for migrating conffiles.
    - Side effect, avoids portability issue with certain