@@ -10,6 +10,8 @@ debhelper (9.20160618.1+unreleased) UNRELEASED; urgency=medium
     package.  Thanks to Sven Joachim for the report, the
     analysis/testing and for providing a patch for the
     most common case.  (Closes: #829142)
+  * Dh_Lib.pm: Cope with the parallel options in make 4.2.
+    Thanks to Martin Dorey for the report.  (Closes: #827132)
 
   [ Translations ]
   * Update German translation (Chris Leick + Eduard Bloch)
